<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="?attr/colorOnSurface"
        android:text="@string/titulo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"/>

    <TextView
        android:id="@+id/titleValueTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="4dp"/>

    <TextView
        android:id="@+id/typeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorOnSurface"
        android:text="@string/tipo"
        app:layout_constraintTop_toBottomOf="@id/titleValueTextView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"/>

    <TextView
        android:id="@+id/typeValueTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintTop_toTopOf="@id/typeTextView"
        app:layout_constraintStart_toEndOf="@id/typeTextView"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/genreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="?attr/colorOnSurface"
        android:text="@string/genero"
        app:layout_constraintTop_toBottomOf="@id/typeTextView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="8dp"/>

    <TextView
        android:id="@+id/genreValueTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintTop_toTopOf="@id/genreTextView"
        app:layout_constraintStart_toEndOf="@id/genreTextView"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/directorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorOnSurface"
        android:text="@string/diretor_autor"
        app:layout_constraintTop_toBottomOf="@id/genreTextView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"/>

    <TextView
        android:id="@+id/directorValueTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintTop_toTopOf="@id/directorTextView"
        app:layout_constraintStart_toEndOf="@id/directorTextView"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/assistidoLidoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorOnSurface"
        android:text="@string/assistido_lido"
        app:layout_constraintTop_toBottomOf="@id/directorTextView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"/>

    <TextView
        android:id="@+id/assistidoLidoValueTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintTop_toTopOf="@id/assistidoLidoTextView"
        app:layout_constraintStart_toEndOf="@id/assistidoLidoTextView"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/ratingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorOnSurface"
        android:text="@string/resenha_rating"
        app:layout_constraintTop_toBottomOf="@id/assistidoLidoTextView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"/>

    <TextView
        android:id="@+id/ratingValueTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintTop_toTopOf="@id/ratingTextView"
        app:layout_constraintStart_toEndOf="@id/ratingTextView"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/resumoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorOnSurface"
        android:text="@string/resenha_resumo"
        app:layout_constraintTop_toBottomOf="@id/ratingTextView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"/>

    <TextView
        android:id="@+id/resumoValueTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintTop_toBottomOf="@id/resumoTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:maxLines="4"
        android:ellipsize="end"
        android:layout_marginTop="4dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>